# tach-rs

./: Cargo.toml  README.md
.cargo/: config.toml
embassy_local_libs/embassy-boot/: Cargo.toml  README.md
embassy_local_libs/embassy-boot-nrf/: Cargo.toml  README.md
embassy_local_libs/embassy-boot-nrf/src/: lib.rs
embassy_local_libs/embassy-boot-rp/: Cargo.toml  README.md
embassy_local_libs/embassy-boot-rp/src/: lib.rs
embassy_local_libs/embassy-boot-stm32/: Cargo.toml  README.md  build.rs
embassy_local_libs/embassy-boot-stm32/src/: lib.rs
embassy_local_libs/embassy-boot/src/: boot_loader.rs  lib.rs  mem_flash.rs
embassy_local_libs/embassy-embedded-hal/: CHANGELOG.md  Cargo.toml  README.md
embassy_local_libs/embassy-embedded-hal/src/: lib.rs
embassy_local_libs/embassy-executor/: CHANGELOG.md  Cargo.toml  README.md  build.rs  gen_config.py
embassy_local_libs/embassy-executor-macros/: Cargo.toml  README.md
embassy_local_libs/embassy-executor-macros/src/: lib.rs
embassy_local_libs/embassy-executor/src/: lib.rs  spawner.rs
embassy_local_libs/embassy-executor/tests/: test.rs
embassy_local_libs/embassy-futures/: Cargo.toml  README.md
embassy_local_libs/embassy-futures/src/: block_on.rs  join.rs  lib.rs  select.rs  yield_now.rs
embassy_local_libs/embassy-hal-internal/: Cargo.toml  README.md  build.rs
embassy_local_libs/embassy-net/: CHANGELOG.md  Cargo.toml  README.md
embassy_local_libs/embassy-net-adin1110/: Cargo.toml  README.md
embassy_local_libs/embassy-net-driver/: CHANGELOG.md  Cargo.toml  README.md
embassy_local_libs/embassy-net-driver-channel/: CHANGELOG.md  Cargo.toml  README.md
embassy_local_libs/embassy-net-enc28j60/: Cargo.toml  README.md
embassy_local_libs/embassy-net-esp-hosted/: Cargo.toml  README.md
embassy_local_libs/embassy-net-ppp/: Cargo.toml  README.md
embassy_local_libs/embassy-net-tuntap/: Cargo.toml  README.md
embassy_local_libs/embassy-net-wiznet/: Cargo.toml  README.md
embassy_local_libs/embassy-nrf/: CHANGELOG.md  Cargo.toml  README.md
embassy_local_libs/embassy-rp/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  funcsel.txt  link-rp.x.in
embassy_local_libs/embassy-stm32/: Cargo.toml  README.md  build.rs  build_common.rs
embassy_local_libs/embassy-stm32-wpan/: Cargo.toml  README.md  build.rs  tl_mbox.x.in  tl_mbox_extended_wb1.x.in  tl_mbox_extended_wbx5.x.in
embassy_local_libs/embassy-sync/: CHANGELOG.md  Cargo.toml  README.md
embassy_local_libs/embassy-time/: CHANGELOG.md  Cargo.toml  README.md
embassy_local_libs/embassy-time-driver/: Cargo.toml  README.md  gen_tick.py
embassy_local_libs/embassy-time-queue-driver/: Cargo.toml  README.md
embassy_local_libs/embassy-usb/: CHANGELOG.md  Cargo.toml  README.md  build.rs  gen_config.py
embassy_local_libs/embassy-usb-dfu/: Cargo.toml  README.md
embassy_local_libs/embassy-usb-driver/: Cargo.toml  README.md
embassy_local_libs/embassy-usb-logger/: CHANGELOG.md  Cargo.toml  README.md
embassy_local_libs/embassy-usb-synopsys-otg/: Cargo.toml  README.md
src/: byte_parsing.rs  data_point.rs  display.rs  elm_commands.rs  elm_uart.rs  error_lifetime.rs  errors.rs  freq_counter.rs  gauge.rs  main.rs  pio_servo.rs  pio_stepper.rs  ws2812.rs
(+385 files in other folders)
