[package]
edition = "2021"
name = "to-rust-a-gauge"
version = "0.1.0"
authors = ["Paul Fornage <36117326+paulwrath1223@users.noreply.github.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0.0"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = "0.3.1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
pio-proc = "0.2"
pio = "0.2.1"
assign-resources = "0.4.1"
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
profont = "0.7.0"
tinybmp = "0.6.0"

embassy-embedded-hal = { version = "0.2.0", path = "embassy_local_libs/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.6.0", path = "embassy_local_libs/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.6.0", path = "embassy_local_libs/embassy-executor", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", path = "embassy_local_libs/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", path = "embassy_local_libs/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.3.0", path = "embassy_local_libs/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.4.0", path = "embassy_local_libs/embassy-net", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns"] }
embassy-net-wiznet = { version = "0.1.0", path = "embassy_local_libs/embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "embassy_local_libs/embassy-futures" }
embassy-usb-logger = { version = "0.2.0", path = "embassy_local_libs/embassy-usb-logger" }

cortex-m-rt = "0.7.3"

#embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
#embassy-sync = { version = "0.6.0", features = ["defmt"] }
#embassy-executor = { version = "0.6.0", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
#embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
#embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
#embassy-usb = { version = "0.2.0", features = ["defmt"] }
#embassy-futures = { version = "0.1.0" }
#embassy-usb-logger = "0.2.0"


cortex-m = { version = "0.7.6" }



log = "0.4.22"
thiserror-no-std = "2.0.2"
nb = "1.1.0"
fixed = "1.28.0"
smart-leds = "0.4.0"
fixed-macro = "1.2.0"
circular-buffer = { version = "0.1.9", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }



[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
